gestion item image serveur

--- a/templates/consommation/index.html
+++ b/templates/consommation/index.html
@@ -1,16 +1,29 @@
 {% extends 'base.html' %}
 
-{% block title %}Green IT - SALVIA DÉVELOPPEMENT{% endblock %}
+{% block title %}Consommation - Items{% endblock %}
 
 {% block body %}
-<div class="container my-5">
-  <div class="card shadow-sm border-0">
-    <div class="card-header text-white text-center py-3" style="background-color: #45b549;">
-      <h3 class="mb-0">Consommation</h3>
-    </div>
-    <div class="card-body p-4">
-
-    </div>
-  </div>
-</div>
+<h1>Consommation des images</h1>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Label</th>
+            <th>Taille Originale (octets)</th>
+            <th>Taille Compressée (octets)</th>
+            <th>CO2 Économisé</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for item in items %}
+        <tr>
+            <td>{{ item.id }}</td>
+            <td>{{ item.label }}</td>
+            <td>{{ item.original_size }}</td>
+            <td>{{ item.compressed_size }}</td>
+            <td>{{ item.co2_economise }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
