--- a/templates/api/index.html
+++ b/templates/api/index.html
@@ -6,12 +6,16 @@
 <div class="container my-5">
   <div class="card shadow-sm border-0">
     <div class="card-header text-white text-center py-3" style="background-color: #45b549;">
-      <h3 class="mb-0">API : clé d'accès</h3>
+      <h3 class="mb-0">API : logs des accès</h3>
+      <a href="/logout" class="btn btn-primary">Déconnexion</a>
     </div>
     <div class="card-body p-4">
         <div id="response" class="mt-3"></div>
         <hr>
         <h4>Suivi des clients et des appels API</h4>
+        <!-- Bouton de rafraîchissement -->
+       <button class="btn btn-secondary mb-3" id="refresh-button">Rafraîchir</button>
+
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -19,6 +23,7 @@
                     <th>Endpoint</th>
                     <th>Méthode</th>
                     <th>Heure</th>
+                    <th>Réponse JSON</th>
                 </tr>
             </thead>
             <tbody id="log-table-body">
@@ -28,6 +33,7 @@
                     <td>{{ log['endpoint'] }}</td>
                     <td>{{ log['method'] }}</td>
                     <td>{{ log['timestamp'] }}</td>
+                    <td>{{ log['json_response'] }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
