--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -4,6 +4,23 @@
 
 {% block body %}
 <div class="container my-5">
+
+ <!-- Toast container -->
+    <div class="position-fixed top-0 end-0 p-3" style="z-index: 2000;">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% for category, message in messages %}
+            <div class="toast align-items-center text-white bg-success border-0 show" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="d-flex">
+                    <div class="toast-body">
+                        {{ message }}
+                    </div>
+                    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+            </div>
+            {% endfor %}
+        {% endwith %}
+    </div>
+
   <div class="card shadow-sm border-0">
     <div class="card-header text-white text-center py-3" style="background-color: #45b549;">
       <h3 class="mb-0">Green IT : Qu’est-ce que le numérique responsable ?</h3>
