--- a/templates/api/login.html
+++ b/templates/api/login.html
@@ -12,7 +12,7 @@
         <label for="password" class="form-label">Mot de passe</label>
         <input type="password" class="form-control" id="password" name="password" required>
     </div>
-    <button type="submit" class="btn btn-primary">Se connecter</button>
+    <button type="submit" class="btn text-white" style="background-color: #45b549;">Se connecter</button>
 </form>
 
 {% endblock %}
