--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,10 @@
     <title>{% block title %}ENI SORTIR{% endblock %}</title>
     <!-- Custom fonts for this template-->
     <!-- <link href="{{ url_for('static', filename='styles/vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-       >
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous">
     <link rel="icon" href="/static/styles/favicon-16x16.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <!-- Custom styles for this template-->
     <link href="{{ url_for('static', filename='styles/css/sb-admin-2.min.css') }}" rel="stylesheet">
 
@@ -31,39 +28,51 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav sidebar sidebar-dark accordion" id="accordionSidebar" style="background-color: #fff">
+        <ul class="navbar-nav sidebar sidebar-dark accordion d-flex flex-column" id="accordionSidebar" style="background-color: #fff; height: 100vh;">
 
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
+            <!-- Sidebar - Brand -->
+            <a class="sidebar-brand d-flex align-items-center justify-content-center mb-4" href="/">
                 <div class="sidebar-brand-icon">
-                    <img src="{{ url_for('static', filename='styles/img/leaf.png') }}" alt="logo ENI"
-                        style="width: 50px; height: 50px;">
+                    <img src="{{ url_for('static', filename='styles/img/leaf.png') }}" alt="logo ENI" style="width: 50px; height: 50px;">
                 </div>
                 <div class="sidebar-brand-text mx-3" style="color: #45b549; font-size: 15px">Green IT</div>
             </a>
 
+            <!-- Nav Item - API -->
             <li class="nav-item">
-            <a class="nav-link" href="/api" style="color: #45b549;">
-                <i class="fa-solid fa-plug"></i>
-                <span>API</span>
-            </a>
+                <a class="nav-link" href="/api" style="color: #45b549;">
+                    <i class="fa-solid fa-plug"></i>
+                    <span>API</span>
+                </a>
             </li>
 
-              <li class="nav-item">
-            <a class="nav-link" href="/consommation" style="color: #45b549;">
-                <i class="fa-solid fa-chart-line"></i>
-                <span>Consommation</span>
-            </a>
+            <!-- Nav Item - Consommation -->
+            <li class="nav-item">
+                <a class="nav-link" href="/consommation" style="color: #45b549;">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <span>Consommation</span>
+                </a>
             </li>
-
 
             <!-- Divider -->
-            <hr class="sidebar-divider d-none d-md-block" style="color:#45b549; ">
+            <hr class="sidebar-divider my-3" style="border-color: #45b549;">
 
-            <!-- Sidebar Toggler (Sidebar) background vert -->
-            <div class="text-center d-none d-md-inline" >
-                <button class="rounded-circle border-0" id="sidebarToggle" style="background-color: #45b549"></button>
+            <!-- Sidebar Footer -->
+            <div class="sidebar-footer mt-auto p-3">
+                <div class="text-center">
+                    <span class="d-block mb-2" style="color: #45b549; font-size: 13px;">Réalisé par l'ENI Squad - Niort</span>
+                    <span class="d-block">
+                        <a href="https://www.linkedin.com/in/arthur-bouchaud-a74981238/" target="_blank" style="color: #45b549; text-decoration: none;">
+                            <i class="fab fa-linkedin me-2"></i>Arthur Bouchaud
+                        </a>
+                    </span>
+                </div>
             </div>
 
+            <!-- Sidebar Toggler -->
+            <div class="text-center d-none d-md-inline">
+                <button class="rounded-circle border-0" id="sidebarToggle" style="background-color: #45b549;"></button>
+            </div>
 
         </ul>
         <!-- End of Sidebar -->
@@ -71,14 +80,13 @@
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
 
-
             <!-- Main Content -->
             <div id="content">
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light topbar mb-4 static-top shadow" style="background-color: #fff">
 
-               <h3 class="mb-0">SALVIA DÉVELOPPEMENT</h3>
+                    <h3 class="mb-0">SALVIA DÉVELOPPEMENT - Le défi: Développement GreenIT</h3>
 
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
@@ -136,11 +144,9 @@
         <!-- Custom scripts for all pages-->
         <script src="{{ url_for('static', filename='styles/js/sb-admin-2.min.js') }}"></script>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"
-           ></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-           ></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     {% endblock %}
 
